# inference-core

./: .env.example  .gitignore  Dockerfile  README.md  agent_graphs.py  app.db-shm  app.db-wal  docker-compose.base.yml  docker-compose.yml  email_config.example.yaml  email_config.yaml  langgraph.example.json  langgraph.test.json  langgraph_auth.py  llm_config.example.yaml  prometheus.yml  pyproject.toml  pytest.ini  run.py  test_observability.py
.github/: copilot-instructions.md
app/: main.py  main_factory.py
app/celery/: README.md  celery_main.py  config.py  task_service.py
app/core/: config.py  dependecies.py  logging_config.py  redis_client.py  security.py
app/frontend/: stream.html
app/llm/: README.md  chains.py  config.py  llm_service.py  models.py  param_policy.py  streaming.py
app/observability/: logging.py  metrics.py  sentry.py
app/schemas/: batch.py  common.py
app/services/: auth_service.py  batch_service.py  llm_service.py  refresh_session_store.py  task_service.py
app/tests/: README.md  conftest.py
docker/: Dockerfile  README.md  docker-compose.mysql.yml  docker-compose.playwright-mcp.headful-windows-xserver.yml  docker-compose.playwright-mcp.headful-wslg.yml  docker-compose.playwright-mcp.headful.yml  docker-compose.playwright-mcp.yml  docker-compose.postgres.yml  docker-compose.qdrant.yml  docker-compose.sqlite.yml  playwright-mcp.config.example.json
docker/tests/: .env.test.example  Dockerfile  docker-compose.test.mysql.yml  docker-compose.test.postgres.yml  docker-compose.test.qdrant.yml  docker-compose.test.sqlite.yml  validate.sh
docs/: README.md  agents-service.md  api-shared-utilities.md  batch-providers-gemini-claude.md  batch-tasks-testing.md  coala-memory-architecture.md  configuration.md  custom-prompts.md  custom-task-usage-logging.md  database-migrations.md  dynamic-configuration.md  email-tools.md  llm_config_summary.md  mcp-integration.md  mcp-tool-integration-refactoring.md  migrate-langchain-v1.md  pluggable-tool-providers.md  structure.md  testing-docker.md  user-agent-instances.md  vector-store.md
docs/issues/: 000-epic-batch-processing.md  001-domain-model-and-migration.md  002-config-yaml-extension.md  003-provider-base-and-registry.md  004-openai-batch-provider-mvp.md  005-celery-tasks-lifecycle.md  006-batch-api-endpoints.md  007-gemini-claude-providers.md  008-observability-and-metrics.md  009-retry-rate-limit-policies.md  010-idempotency-and-partial-retry.md  011-cost-usage-aggregation.md  012-privacy-and-pii-masking.md  013-adaptive-polling-performance.md
docs/observability/: llm-usage-logging.md
docs/providers/: openai-batch-provider.md
examples/: custom_task_demo.py  langgraph_agentservice_tutorial.py  mcp_math_server.py  tool_provider_example.py
frontend/chat/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/sample-chat/: .env.example  README.md  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
inference_core/: main_factory.py  notebook_utils.py
inference_core/agents/: __init__.py  agent_mcp_tools.py  graph_builder.py  graph_registry.py  predefinied_agents.py
inference_core/celery/: README.md  async_utils.py  celery_main.py  config.py
inference_core/core/: config.py  dependecies.py  email_config.py  env.py  lifecycle.py  logging_config.py  public_user.py  redis_client.py  resource_lifecycle.py  security.py
inference_core/frontend/: stream.html
inference_core/llm/: README.md  __init__.py  callbacks.py  chains.py  chat_deepinfra.py  chat_fireworks.py  config.py  custom_task.py  emulation.py  mcp_tools.py  models.py  param_policy.py  prompts.py  streaming.py  think_tags.py  tools.py  usage_logging.py
inference_core/observability/: __init__.py  logging.py  metrics.py  sentry.py
inference_core/schemas/: agent_prompt_limits.py  auth.py  batch.py  llm_config.py  tasks_responses.py  user_agent_instance.py  vector.py  weather.py
inference_core/services/: _cancel.py  agent_memory_service.py  agent_memory_service_alt.py  agent_server_client.py  agent_snapshot_service.py  agents_service.py  auth_service.py  batch_service.py  email_service.py  embedding_service.py  imap_service.py  llm_agents.py  llm_config_service.py  llm_service.py  llm_usage_service.py  refresh_session_store.py  stream_utils.py  task_service.py  user_agent_instance_service.py  vector_store_service.py
inference_core/vectorstores/: __init__.py  base.py  factory.py  qdrant_provider.py
migrations/: env.py
migrations/versions/: b3dac404c08b_add_is_deepagent_and_subagents_to_.py  e70bd305a912_add_skills_column_to_user_agent_.py  fix_public_user_uuid_storage.py  seed_public_user.py  transition_to_hard_delete.py
observability/: README.md
observability/prometheus/: prometheus.yml
scripts/: bootstrap_test_db.py  create_llm_config_tables.py  email_demo.py  migrate_memory_to_coala.py  perf_launcher.py  run_perf_endurance.py  run_perf_heavy.py  run_perf_light.py  run_perf_llm_mock.py  run_perf_medium.py  run_perf_spike.py  sync_langgraph_json.py
scripts/perf_tests/: perf_launcher.py  run_perf_agent_server_direct.py  run_perf_endurance.py  run_perf_heavy.py  run_perf_light.py  run_perf_llm_mock.py  run_perf_medium.py  run_perf_spike.py
skills/check_weather/: SKILL.md
templates/email/: reset_password.html  reset_password.txt  verify_email.html  verify_email.txt
tests/: README.md  conftest.py
tests/fixtures/: __init__.py  access_control.py  weather_response.py
tests/integration/: test_agent_instances.py  test_agent_server.py  test_agent_server_configurable.py  test_auth_flow.py  test_batch_access_control_integration.py  test_batch_api_endpoints.py  test_batch_events_timeline.py  test_batch_integration.py  test_batch_service.py  test_custom_task_usage_logging.py  test_db.py  test_e2e_llm_api_celery.py  test_email_verification_flow.py  test_gemini_claude_batch_integration.py  test_llm_access_control_integration.py  test_llm_streaming.py  test_llm_tasks.py  test_llm_tasks_real.py  test_llm_usage_logging.py  (+6 more)
(+247 files in other folders)
