[project]
name = "inference-core"
version = "0.4.1"
description = "A ready-to-use FastAPI backend with Celery-powered background tasks and first-class LLM integration using LangChain."
authors = [
    {name = "Tomasz Osiński"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi[standard] (>=0.128.0,<1.0.0)",
    "uvicorn[standard] (>=0.40.0,<1.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "sentry-sdk[fastapi] (>=2.48.0,<3.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "aiomysql (>=0.3.2,<1.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "aiosqlite (>=0.22.1,<1.0.0)",
    "asyncpg (>=0.31.0,<1.0.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "celery[redis] (>=5.6.1,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-community (>=0.4.1,<1.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "redis (>=5.3.1,<6.0.0)",
    "langchain-google-genai (>=3.2.0,<4.0.0)",
    "langchain-anthropic (>=1.3.0,<2.0.0)",
    "google-genai (>=1.56.0,<2.0.0)",
    "anthropic (>=0.75.0,<1.0.0)",
    "prometheus-client (>=0.23.1,<1.0.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "sentence-transformers (>=3.4.1,<4.0.0)",
    "mcp (>=1.25.0,<2.0.0)",
    "langchain-mcp-adapters (>=0.2.1,<1.0.0)",
    "Jinja2 (>=3.1.6,<4.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-core (>=1.2.5,<2.0.0)",
    "langchain-classic (>=1.0.1,<2.0.0)",
    "deepagents (>=0.3.1,<1.0.0)",
    "tavily-python (>=0.7.17,<1.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.2,<4.0.0)",
    "langgraph-checkpoint-sqlite (>=3.0.1,<4.0.0)",
    "gevent (>=25.9.1,<26.0.0)",
    "python-socketio (>=5.16.0,<6.0.0)",
    "marshmallow (>=3.26.2,<4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "urllib3 (>=2.6.3,<3.0.0)",
    "werkzeug (>=3.1.5,<4.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "inference_core" },
]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
debugpy = "^1.8.19"
locust = "^2.43.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
